k8s/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-monitor-frontend-svc
spec:
  selector:
    app: weather-monitor-frontend
  ports:
    - port: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-monitor-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-monitor-frontend
  template:
    metadata:
      labels:
        app: weather-monitor-frontend
    spec:
      containers:
        - name: weather-monitor-frontend
          image: quangtuan9237/weather-monitor
          resources:
            limits:
              cpu: "0.1"
            requests:
              cpu: "0.1"
