k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-weather-monitor
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/proxy-body-size: "1000m"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    external-dns.alpha.kubernetes.io/hostname: "weather.quangtuan.me"
    external-dns.alpha.kubernetes.io/target: quangtuan.me
    external-dns.alpha.kubernetes.io/ttl: "120"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - weather.quangtuan.me
      secretName: certificate-prod-weather-quangtuan-me-tls

  rules:
    - host: "weather.quangtuan.me"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
